# tradingbot

./: .gitignore  CLAUDE.md  COWORK_OUTPUT.md  COWORK_PLAN.md  CTempbt_out.txt  LIQUIDITY_SWEEP_ACTION_PLAN.md  README.md  analyze_cpi.py  create_notion_progress.py  generate_leg_screenshots.py  generate_screenshots.py  pyproject.toml  run_backtest.py  run_jan.py  setup_notion_structure.py  test_discord.py
config/: contracts.yaml  settings.yaml
data/: fetch_databento.py  journal.db-shm  journal.db-wal  save_data.py
docs/: entry_model_rules_from_sources.txt  research_session_2026-05-16.md
scripts/: run_backtest.py  run_legs_scan.py  setup_notion.py  setup_notion_structure.py  visualize_legs.py
src/smc_bot/: config.py
src/smc_bot/data/: aggregator.py  candle.py  history.py
src/smc_bot/detectors/: cisd.py  fvg.py  ifvg.py  liquidity.py  market_structure.py  nwog_ndog.py  premium_discount.py  smt.py  sweep.py  swing.py
src/smc_bot/engine/: backtest.py
src/smc_bot/filters/: news.py  session.py
src/smc_bot/journal/: database.py  discord_client.py  imgur_client.py  logger.py  notion_client.py  reporter.py  screenshot.py
src/smc_bot/models/: base.py  confluence.py
src/smc_bot/risk/: position_sizer.py  risk_manager.py  trade_manager.py
tests/: conftest.py
tests/unit/: test_cisd.py  test_confluence.py  test_fvg.py  test_ifvg.py  test_liquidity.py  test_nwog_ndog.py  test_position_sizer.py  test_risk_manager.py  test_smt.py  test_sweep.py  test_swing.py
