[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smc-bot"
version = "0.1.0"
description = "Automated SMC/ICT day trading bot for NQ/ES futures"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "httpx>=0.24",
]

[project.optional-dependencies]
live = ["ib_async>=1.0"]
dashboard = ["streamlit>=1.28"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smc_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
